# agama-release-checker

./: .gitignore  CLEANUP-plan1.txt  CLEANUP.md  HACKING.md  HOW_TO_RELEASE.md  Makefile  PLAN.md  README.md  agama-release-checker  agama-release-maker  config-devtools.yml  config.yml  filter-out-success-runs  maker-config-production.yml  maker-config-sle-16.yml  maker-config-testing.yml  pyproject.toml  query-submit-runs
src/agama_release_checker/: caching.py  config.py  git_manager.py  iso_utils.py  main.py  maker.py  models.py  network.py  parsing.py  reporting.py  utils.py
src/agama_release_checker/reports/: gitea_packages_report.py  gitea_pull_requests.py  gitea_report.py  gitea_requests_report.py  iso_packages_report.py  iso_report.py  obs_packages_report.py  obs_report.py  obs_requests.py  obs_requests_report.py
tests/: test_caching.py  test_git_manager.py  test_gitea.py  test_gitea_packages_report.py  test_gitea_pull_requests.py  test_gitea_requests_report.py  test_iso.py  test_iso_packages_report.py  test_iso_utils.py  test_link_manager.py  test_main.py  test_maker.py  test_network.py  test_obs.py  test_obs_packages_report.py  test_obs_requests.py  test_obs_requests_report.py  test_print_packages_table.py  test_reporting.py
tests/fixtures/: mirrorcache.json
