[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agama-release-checker"
version = "0.1.0"
description = "A tool to check for Agama releases in ISOs."
authors = [{name = "First Last", email = "your@email.com"}]
license-files = ["LICENSE"]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pyyaml",
    "requests",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
    "requests-mock",
]

[project.scripts]
agama-release-checker = "agama_release_checker.main:main"
agama-release-maker = "agama_release_checker.maker:main"

[tool.hatch.build.targets.wheel]
sources = ["src"]

[tool.coverage.run]
source_pkgs = ["agama_release_checker"]
branch = true

[tool.coverage.html]
directory = "htmlcov"

[tool.mypy]
explicit_package_bases = true
mypy_path = "src"
